// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-secondary"
    data-toggle="dropdown"
    onClick={[Function]}
    type="button"
  >
    ☰
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-menu-item dropdown-item"
      href="/workflows"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
      <span
        className="t-d-gray content-3 ml-3"
      >
        Your Workflows
      </span>
    </a>
    <div>
      <div
        className="dropdown-divider"
        onClick={[Function]}
        tabIndex="-1"
        type={undefined}
      />
      <button
        className="dropdown-menu-item dropdown-item"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="t-d-gray content-3 ml-3"
        >
          Undo
        </span>
      </button>
      <button
        className="dropdown-menu-item dropdown-item"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="t-d-gray content-3 ml-3"
        >
          Redo
        </span>
      </button>
      <div
        className="dropdown-divider"
        onClick={[Function]}
        tabIndex="-1"
        type={undefined}
      />
    </div>
    <a
      className="dropdown-menu-item dropdown-item"
      href="http://blog.cjworkbench.org"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
      <span
        className="t-d-gray content-3 ml-3"
      >
        Help
      </span>
    </a>
    <a
      className="dropdown-menu-item dropdown-item"
      href="/account/logout"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
      <span
        className="t-d-gray content-3 ml-3"
      >
        Logout
      </span>
    </a>
  </div>
</div>
`;

exports[`renders correctly for workflows list page 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-secondary"
    data-toggle="dropdown"
    onClick={[Function]}
    type="button"
  >
    ☰
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-menu-item dropdown-item"
      href="http://blog.cjworkbench.org"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
      <span
        className="t-d-gray content-3 ml-3"
      >
        Help
      </span>
    </a>
    <a
      className="dropdown-menu-item dropdown-item"
      href="/account/logout"
      onClick={[Function]}
      tabIndex="0"
      type={undefined}
    >
      <span
        className="t-d-gray content-3 ml-3"
      >
        Logout
      </span>
    </a>
  </div>
</div>
`;
